# aof

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  KUBECTL_REFACTORING_SUMMARY.md  LICENSE.md  README.md  RELEASE_PROCESS.md
aof/: BUILD_SUCCESS_SUMMARY.md  Cargo.toml  DELIVERABLES.md  FINAL_SUMMARY.md  IMPROVEMENTS_SUMMARY.md  MEMORY_INTEGRATION_STATUS.md  PROJECT_STATUS.md  README.md  TESTING_AND_ERROR_TRACKING.md  k8s-agent.yaml
aof/.github/workflows/: ci.yml  dependabot.yml  docs.yml  release.yml  security.yml
aof/crates/aof-core/: Cargo.toml
aof/crates/aof-core/src/: agent.rs  error.rs  error_tracker.rs  lib.rs  memory.rs  model.rs  tool.rs
aof/crates/aof-core/tests/: memory_tests.rs  tool_tests.rs
aof/crates/aof-gui/: .gitignore  Cargo.toml  GUI_BUILD_CHECKLIST.md  README.md  dev.sh  tauri.conf.json
aof/crates/aof-gui/capabilities/: default.json
aof/crates/aof-gui/docs/: DEVELOPMENT.md  USER_GUIDE.md
aof/crates/aof-gui/src/: db.rs  lib.rs  main.rs  state.rs
aof/crates/aof-gui/src/commands/: agent.rs  config.rs  db.rs  integrations.rs  mcp.rs  memory.rs  mod.rs  monitoring.rs  settings.rs
aof/crates/aof-gui/ui/: index.html  package.json  pnpm-lock.yaml  vite.config.ts
aof/crates/aof-gui/ui/src/: App.tsx  index.css
aof/crates/aof-gui/ui/src/components/: AgentTemplates.tsx  MCPToolsBrowser.tsx  MarkdownRenderer.tsx  MemoryViewer.tsx  PlatformIntegrations.tsx  Settings.tsx  StreamingOutput.tsx  SystemMonitoring.tsx
aof/crates/aof-gui/ui/src/lib/: toast.ts
aof/crates/aof-llm/: Cargo.toml
aof/crates/aof-llm/docs/: PROVIDERS.md
aof/crates/aof-llm/src/: lib.rs  provider.rs
aof/crates/aof-llm/src/provider/: anthropic.rs  bedrock.rs  google.rs  openai.rs
aof/crates/aof-llm/tests/: anthropic_tests.rs  bedrock_tests.rs  openai_tests.rs  provider_tests.rs
aof/crates/aof-mcp/: Cargo.toml
aof/crates/aof-mcp/examples/: http_transport_example.rs
aof/crates/aof-mcp/src/: client.rs  lib.rs  transport.rs
aof/crates/aof-mcp/src/transport/: http.rs  sse.rs  stdio.rs
aof/crates/aof-mcp/tests/: transport_tests.rs
aof/crates/aof-memory/: Cargo.toml
aof/crates/aof-memory/src/: lib.rs
aof/crates/aof-memory/src/backend/: memory.rs  mod.rs
aof/crates/aof-memory/tests/: backend_tests.rs
aof/crates/aof-runtime/: Cargo.toml
aof/crates/aof-runtime/src/: lib.rs
aof/crates/aof-runtime/src/executor/: agent_executor.rs  mod.rs  runtime.rs
aof/crates/aof-runtime/src/orchestrator/: mod.rs
aof/crates/aof-runtime/src/task/: mod.rs
aof/crates/aof-runtime/tests/: executor_tests.rs  mcp_initialization.rs  tool_executor.rs
aof/crates/aof-triggers/: Cargo.toml  README.md
aof/crates/aof-triggers/src/: lib.rs
aof/crates/aof-triggers/src/command/: mod.rs
aof/crates/aof-triggers/src/handler/: mod.rs
aof/crates/aof-triggers/src/response/: mod.rs
aof/crates/aof-triggers/src/server/: mod.rs
aof/crates/aof-triggers/tests/: command_parsing.rs  integration.rs  platform_discord.rs  platform_slack.rs  platform_telegram.rs  platform_whatsapp.rs
aof/crates/aof-triggers/tests/fixtures/: discord_interaction.json  slack_message.json  slack_url_verification.json  telegram_text.json  whatsapp_message.json
aof/crates/aofctl/: Cargo.toml
aof/crates/aofctl/src/: cli.rs  main.rs  resources.rs
aof/crates/aofctl/src/commands/: api_resources.rs  apply.rs  delete.rs  describe.rs  exec.rs  get.rs  logs.rs  mod.rs  run.rs  tools.rs  validate.rs  version.rs
aof/crates/aofctl/tests/: README.md  TEST_STRATEGY.md  TEST_SUMMARY.md  cli_tests.rs  error_tests.rs  kubectl_compat_tests.rs  output_format_tests.rs  test_helpers.rs
aof/crates/aofctl/tests/acceptance/: end_to_end_tests.rs  kubectl_compatibility_tests.rs
aof/crates/aofctl/tests/common/: mod.rs
aof/crates/aofctl/tests/fixtures/: agent_with_tools.yaml  invalid_agent.yaml  simple_agent.yaml
aof/crates/aofctl/tests/integration/: apply_command_tests.rs  delete_command_tests.rs  error_handling_tests.rs  get_command_tests.rs  run_command_tests.rs  validate_command_tests.rs
aof/crates/aofctl/tests/unit/: cli_parsing_tests.rs  command_validation_tests.rs  output_format_tests.rs  resource_type_tests.rs
aof/crates/smoke-test-mcp/: Cargo.toml
aof/crates/smoke-test-mcp/src/: main.rs
aof/docs/: ARCHITECTURE.md  DEPLOYMENT_GUIDE.md  GUI_INTEGRATION.md  IMPLEMENTATION_SUMMARY.md  INTEGRATION_SUMMARY.md  MEMORY_INTEGRATION_COMPLETE.md  PROJECT_SUMMARY.md  SMOKE_TEST_MCP.md  STREAMING_IMPLEMENTATION.md  STREAMING_SUMMARY.md  TESTING_GUIDE.md  TEST_COVERAGE_SUMMARY.md  anthropic-implementation.md  ci-cd-setup.md  http-transport.md  kubectl-refactor-summary.md  memory-integration-complete.md  memory-integration-patch.md  memory-integration.md  parallel-tool-execution.md  tool-retry-implementation.md  triggers-architecture.md  triggers-integration-guide.md  triggers-integration-notes.md  whatsapp-implementation-summary.md
aof/docs/implementation/: PRIORITY_PLAN.md
aof/docs/troubleshooting/: GEMINI_TROUBLESHOOTING.md
aof/examples/: README.md  quickstart.md  simple-agent.yaml  streaming_example.rs
aof/examples/agents/: devops-assistant.yaml  discord-community-mod.yaml  github-pr-reviewer.yaml  incident-responder.yaml  k8s-helper.yaml  slack-support-bot.yaml  telegram-analytics.yaml  whatsapp-sales-bot.yaml
aof/scripts/: test-agent.sh  test-pre-compile.sh  test-smoke-mcp.sh
aof/src/: memory_integration.rs
aof/testframework/: smoke-test-agent.yaml  system-tools-test.yaml
aof/tests/: TESTER_AGENT_SUMMARY.md  TRIGGERS_TEST_PLAN.md  end_to_end_agent_test.rs  gui_command_test.rs  memory_integration_test.rs  multi_tool_parallel_test.rs  parallel_tools_test.rs  platform_flow_test.rs  streaming_response_test.rs
config/: memory-ruvector.yaml
docs/: CODE_REVIEW_REPORT.md  DOCUMENTATION_INDEX.md  GUI_100_COMPLETE.md  GUI_COMPLETION_SPEC.md  GUI_COMPLETION_STATUS.md  GUI_FINAL_STATUS.md  KUBECTL_REFACTOR_COMPLETE.md  LLM_ARCHITECTURE_DIAGRAM.md  LLM_COMPLETE_OVERVIEW.md  LLM_DEPENDENCIES.toml  LLM_INDEX.md  LLM_PROVIDER_DESIGN.md  LLM_QUICKSTART.md  LLM_SUMMARY.md  MODEL_UPDATE_SUMMARY.md  README.md  user-docs  (+6 more)
(+114 files in other folders)
