[package]
name = "aof-llm"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Multi-provider LLM abstraction layer"

[dependencies]
aof-core = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
async-trait = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
reqwest = { workspace = true }
futures = { workspace = true }
bytes = { workspace = true }

# Provider-specific dependencies (optional)
aws-config = { version = "1.0", optional = true }
aws-sdk-bedrockruntime = { version = "1.0", optional = true }
aws-smithy-types = { version = "1.3.5", optional = true }
async-stream = { version = "0.3", optional = true }

[features]
default = ["anthropic", "openai"]
anthropic = []
openai = []
bedrock = ["aws-config", "aws-sdk-bedrockruntime", "aws-smithy-types", "async-stream"]
azure = []
ollama = []
all-providers = ["anthropic", "openai", "bedrock", "azure", "ollama"]

[dev-dependencies]
tokio = { workspace = true, features = ["test-util", "full", "macros"] }
